--- a/#source/scss/communication.scss
+++ b/#source/scss/communication.scss
@@ -79,6 +79,19 @@
                 }
             }
             .orange__button{
+                color: #FFFFFF;
+                @include fonts(700,16px,48px);
+                background-color: #FF5A30;
+                border: none;
+                padding: 0 32px;
+                border-radius: 4px;
+                border: 1px solid #FF5A30;
+                &:hover{
+                    cursor: pointer;
+                    color: #FF5A30;
+                    background-color: #FFFFFF;
+                    transition: all 0.2s ease-in;
+                }
                 padding: 0 32px;
             }
         }
