--- a/#source/scss/header_footer.scss
+++ b/#source/scss/header_footer.scss
@@ -1,6 +1,6 @@
 //header------------------------------------------------------------------------------
 
-.header{
+.header__box{
     padding: 20px 0;
     display: flex;
     align-items: center;
