--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.header {
+.header__box {
   padding: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10,7 +10,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.header a {
+.header__box a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -365,7 +365,23 @@
   border-color: #fff;
 }
 .communication__back .wrapper .communication .orange__button {
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 48px;
+  background-color: #FF5A30;
+  border: none;
   padding: 0 32px;
+  border-radius: 4px;
+  border: 1px solid #FF5A30;
+  padding: 0 32px;
+}
+.communication__back .wrapper .communication .orange__button:hover {
+  cursor: pointer;
+  color: #FF5A30;
+  background-color: #FFFFFF;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .supported__title {
@@ -463,6 +479,7 @@
   font-size: 46px;
   font-weight: 700;
   line-height: 59.8px;
+  text-align: center;
 }
 
 .our__text {
@@ -471,6 +488,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
+  text-align: center;
 }
 
 .our__cards {
